Add people on people.astro and edit contact us on contact.astro

--- a/src/pages/people.astro
+++ b/src/pages/people.astro
@@ -74,6 +74,80 @@ const metadata = {
         },
         testimonial: `Nattawet Sriwichai serves as a research assistant, specializing in non-coding RNA and gene regulatory network reconstruction. His expertise also includes next-generation sequencing data analysis, microbiome analysis, and web application development. His diverse skills contribute to various aspects of genomic and bioinformatic research.`,
       },
+      {
+        name: 'Nattavat Sukko',
+        job: 'Research Assistant',
+        image: {
+          src: '',
+          alt: 'Nattavat Sukko',
+        },
+        testimonial: `Nattavat Sukko, is dedicated to unraveling the mysteries of the transcriptional regulatory network. His research explores the intricate mechanisms governing gene expression, contributing valuable insights to the forefront of scientific discovery`,
+      },
+      {
+        name: 'Issaraporn A-piwat',
+        job: 'Research Assistant',
+        image: {
+          src: '',
+          alt: 'Issaraporn A-piwat',
+        },
+        testimonial: `Issaraporn A-piwat, specializes in the parameterization of cassava crop growth models. With a focus on water-use efficiency and crop response to irrigation, she contributes valuable insights to the field of agricultural research.`,
+      },
+      {
+        name: 'Akepawee Sukcharoen',
+        job: 'Research Assistant',
+        image: {
+          src: '',
+          alt: 'Akepawee Sukcharoen',
+        },
+        testimonial: `Akepawee Sukcharoen, specializes in the dynamic field of Plant Science, with a particular focus on starch measurement in cassava. Akepawee's expertise lies in unraveling the complexities of plant biology, contributing valuable insights to advance agricultural research.`,
+      },
+      {
+        name: 'Nattharat Punyasu',
+        job: 'PhD Student',
+        image: {
+          src: '',
+          alt: 'Nattharat Punyasu',
+        },
+        testimonial: `Nattharat Punyasu delves into the intricate world of genome-scaled metabolic models. With a passion for unraveling the complexities of biological systems, Nattharat's research contributes to the forefront of scientific understanding`,
+      },
+      {
+        name: 'Ratchaprapa Ruengsang',
+        job: 'PhD Student',
+        image: {
+          src: '',
+          alt: 'Ratchaprapa Ruengsang',
+        },
+        testimonial: `Ratchaprapa Ruengsang explores the intricate realms of genome-scaled metabolic models and the fascinating dynamics of the cell cycle. Her research delves into the molecular intricacies shaping biological systems, contributing valuable insights to scientific understanding.`,
+      },
+      {
+        name: 'Monica Adu-gyamfi',
+        job: 'PhD Student',
+        image: {
+          src: '',
+          alt: 'Monica Adu-gyamfi',
+        },
+        testimonial: `Monica Adu-gyamfi focuses her research endeavors in the field of Plant Science. Exploring the complexities of plant biology`,
+      },
+      {
+        name: 'Muhammad Naufal Hakkim',
+        job: 'Master Student',
+        image: {
+          src: '',
+          alt: 'Muhammad Naufal Hakkim',
+        },
+        testimonial: `Muhammad Naufal Hakkim is dedicated to exploring the intricacies of genome-scaled metabolic models. His research focuses on decoding the molecular pathways that shape biological systems, contributing valuable insights to the evolving landscape of scientific knowledge.`,
+      },
+      {
+        name: 'Natchapon Srinak',
+        job: 'Master Student',
+        image: {
+          src: '',
+          alt: 'Natchapon Srinak',
+        },
+        testimonial: `Natchapon Srinak delves into the cutting-edge field of genome-scaled metabolic models with a specific focus on microbial fuel cell technology. His research aims to unravel the intricate molecular pathways shaping microbial fuel cells, contributing valuable insights to the forefront of sustainable energy research.`,
+      },
+
+      
     ]}
   />
 </Layout>
