--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,13 +20,18 @@ const metadata = {
     items={[
       {
         title: 'Contact Person',
-        description: `Asst. Prof. Dr. Treenut Saithong<br /> Asst. Prof. Dr. Saowalak Kalapanulak`,
-        icon: 'tabler:map-pin',
+        description: `Asst. Prof. Dr. Treenut Saithong (treenut.sai@kmutt.ac.th)<br /><br /> Asst. Prof. Dr. Saowalak Kalapanulak (saowalak.kal@kmutt.ac.th)`,
+        icon: 'tabler:users',
+      },
+      {
+        title: 'Phone Call',
+        description: `(+66) 2-470-7406`,
+        icon: 'tabler:phone',
       },
       {
         title: 'Mailing Address',
         description: `Center for Agricultural Systems Biology, <br /> Systems Biology and Bioinformatics Research Laboratory, Pilot Plant Development and Training Institute, King Mongkut’s University of Technology Thonburi (Bangkuntien),<br /> 49 Soi Thian Thale 25, Bang Khun Thian Chai Thale Road, Tha Kham,Bang Khun Thian, Bangkok 10150, Thailand.`,
-        icon: 'tabler:map-pin',
+        icon: 'tabler:mail',
       },
     ]}
   />
