Revise miss spelling word on index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const metadata = {
     subtitle="We bring together experts from diverse fields to delve deep into the study of celluar regulation, with a specific focus on crop plant development, phyto-product biosynthesis, and crop yield improvement."
     items={[
       {
-        title: 'Celluar Regulation Research Areas',
+        title: 'Cellular Regulation Research Areas',
         description:
           'Our research focuses on studying cellular regulation, crop plant development, phyto-product biosynthesis, and crop yield improvement. We exploy multidisciplinary expertise and modeling techniques to accerlerate comprehensive studies in these areas.',
         icon: 'tabler:brand-tailwind',
