index.astro was revised the miss spelling on ph-MeRecon url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ const metadata = {
         description:
           "The compartmentalized network of primary carbon metabolism in photosynthetic tissues of cassava",
         icon: 'flat-color-icons:document',
-        link: 'ph-MeRecon'
+        link: '/ph-MeRecon'
       },
       {
         title: 'Me-miRNA',
