--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ const metadata = {
       {
         title: 'MePPI-In',
         description: "Genome-wide prediction of protein-protein interaction network of cassava using interolog-based method",
-        icon: 'flat-color-icons:template',
+        icon: 'flat-color-icons:org-unit',
         link: '/ppi',
       },
       {
@@ -126,6 +126,13 @@ const metadata = {
           'Plant DBD-TFBS Interaction Prediction',
         icon: 'flat-color-icons:business-contact',
         link: '/Plant-DTI'
+      },
+      {
+        title: 'mmGEM',
+        description:
+          'Microbe-microbe Interaction Genome-scale Metabolic Model',
+        icon: 'flat-color-icons:serial-tasks',
+        link: 'https://github.com/KMUTT-CASB/mmGEM'
       }
     ]}
   >
