--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ const metadata = {
     items={[
       {
         title: 'Contact Person',
-        description: `Asst. Prof. Dr. Treenut Saithong (treenut.sai@kmutt.ac.th)<br /><br /> Asst. Prof. Dr. Saowalak Kalapanulak (saowalak.kal@kmutt.ac.th)`,
+        description: `Assoc. Prof. Dr. Treenut Saithong (treenut.sai@kmutt.ac.th)<br /><br /> Assoc. Prof. Dr. Saowalak Kalapanulak (saowalak.kal@kmutt.ac.th)`,
         icon: 'tabler:users',
       },
       {
