--- a/src/pages/people/index.astro
+++ b/src/pages/people/index.astro
@@ -28,7 +28,7 @@ const metadata = {
         
       },
       {
-        name: 'Saowalak Kalapanulak, Asst. Prof. Dr.',
+        name: 'Saowalak Kalapanulak, Assoc. Prof. Dr.',
         job: 'Lecturer / Principal investigator',
         image: {
           src: '~/assets/images/people/saowalak.png',
@@ -54,15 +54,6 @@ const metadata = {
           alt: 'Porntip Chiewchankaset',
         },
         testimonial: `Dr. Porntip Chiewchankaset, specializes in genome-scaled metabolic models and plant physiology. Her research contributes to understanding the intricate metabolic processes in plants and their applications.`,
-      },
-      {
-        name: 'Thitiwan Jumpa, Ph.D',
-        job: 'Postdoctoral Researcher',
-        image: {
-          src: '',
-          alt: 'Thitiwan Jumpa',
-        },
-        testimonial: `Dr. Thitiwan Jumpa is a postdoctoral researcher specializing in plant physiology, plant stress response, and cassava storage root induction. Her work contributes to understanding the physiological and stress-related aspects of plants, with a focus on cassava root development.`,
       },
       {
         name: 'Nattawet Sriwichai',
@@ -102,15 +93,6 @@ const metadata = {
         testimonial: `Akepawee Sukcharoen, specializes in the dynamic field of Plant Science, with a particular focus on starch measurement in cassava. Akepawee's expertise lies in unraveling the complexities of plant biology, contributing valuable insights to advance agricultural research.`,
       },
       {
-        name: 'Nattharat Punyasu',
-        job: 'PhD Student',
-        image: {
-          src: '',
-          alt: 'Nattharat Punyasu',
-        },
-        testimonial: `Nattharat Punyasu delves into the intricate world of genome-scaled metabolic models. With a passion for unraveling the complexities of biological systems, Nattharat's research contributes to the forefront of scientific understanding`,
-      },
-      {
         name: 'Ratchaprapa Ruengsang',
         job: 'PhD Student',
         image: {
@@ -137,15 +119,7 @@ const metadata = {
         },
         testimonial: `Muhammad Naufal Hakkim is dedicated to exploring the intricacies of genome-scaled metabolic models. His research focuses on decoding the molecular pathways that shape biological systems, contributing valuable insights to the evolving landscape of scientific knowledge.`,
       },
-      {
-        name: 'Natchapon Srinak',
-        job: 'Master Student',
-        image: {
-          src: '',
-          alt: 'Natchapon Srinak',
-        },
-        testimonial: `Natchapon Srinak delves into the cutting-edge field of genome-scaled metabolic models with a specific focus on microbial fuel cell technology. His research aims to unravel the intricate molecular pathways shaping microbial fuel cells, contributing valuable insights to the forefront of sustainable energy research.`,
-      },
+      
 
       
     ]}
